// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`schema for 'US_ME' 'RES001' 1`] = `
{
  "admissionDate": "2013-11-16",
  "custodyLevel": "MINIMUM",
  "displayId": "dRES001",
  "facilityId": "FACILITY NAME",
  "gender": "MALE",
  "officerId": "OFFICER5",
  "personExternalId": "RES001",
  "personName": {
    "givenNames": "First",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres001",
  "releaseDate": "2024-11-16",
  "stateCode": "US_ME",
  "unitId": "UNIT A",
}
`;

exports[`schema for 'US_ME' 'RES002' 1`] = `
{
  "admissionDate": "2018-02-17",
  "custodyLevel": "MINIMUM",
  "displayId": "dRES002",
  "facilityId": "FACILITY NAME",
  "gender": "FEMALE",
  "officerId": "OFFICER5",
  "personExternalId": "RES002",
  "personName": {
    "givenNames": "Second",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres002",
  "releaseDate": "2024-02-16",
  "stateCode": "US_ME",
  "unitId": "UNIT B",
}
`;

exports[`schema for 'US_ME' 'RES003' 1`] = `
{
  "admissionDate": "2019-06-18",
  "custodyLevel": "MINIMUM",
  "displayId": "dRES003",
  "facilityId": "FACILITY NAME",
  "gender": "TRANS_FEMALE",
  "officerId": "OFFICER5",
  "personExternalId": "RES003",
  "personName": {
    "givenNames": "Third",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres003",
  "releaseDate": "2023-12-16",
  "stateCode": "US_ME",
  "unitId": "UNIT B",
}
`;

exports[`schema for 'US_ME' 'RES004' 1`] = `
{
  "admissionDate": "2019-05-18",
  "custodyLevel": "MINIMUM",
  "displayId": "dRES004",
  "facilityId": "FACILITY NAME",
  "gender": "INTERNAL_UNKNOWN",
  "officerId": "OFFICER5",
  "personExternalId": "RES004",
  "personName": {
    "givenNames": "Fourth",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres004",
  "releaseDate": "2024-01-16",
  "stateCode": "US_ME",
  "unitId": "UNIT A",
}
`;

exports[`schema for 'US_ME' 'RES005' 1`] = `
{
  "admissionDate": "2020-05-16",
  "custodyLevel": "MINIMUM",
  "displayId": "dRES005",
  "facilityId": "FACILITY NAME",
  "gender": "TRANS",
  "officerId": "OFFICER5",
  "personExternalId": "RES005",
  "personName": {
    "givenNames": "Fifth",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres005",
  "releaseDate": "2024-05-16",
  "stateCode": "US_ME",
  "unitId": "UNIT B",
}
`;

exports[`schema for 'US_ME' 'RES006' 1`] = `
{
  "admissionDate": "2015-02-16",
  "custodyLevel": "MINIMUM",
  "displayId": "dRES006",
  "facilityId": "FACILITY NAME",
  "gender": "TRANS",
  "officerId": "OFFICER5",
  "personExternalId": "RES006",
  "personName": {
    "givenNames": "Sixth",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres006",
  "releaseDate": "2024-02-16",
  "stateCode": "US_ME",
  "unitId": "UNIT B",
}
`;

exports[`schema for 'US_ME' 'RES007' 1`] = `
{
  "admissionDate": "2019-06-16",
  "custodyLevel": "MINIMUM",
  "displayId": "dRES007",
  "facilityId": "FACILITY NAME",
  "gender": "FEMALE",
  "officerId": "OFFICER5",
  "personExternalId": "RES007",
  "personName": {
    "givenNames": "Seventh",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres007",
  "releaseDate": "2023-12-16",
  "stateCode": "US_ME",
  "unitId": "UNIT B",
}
`;

exports[`schema for 'US_ME' 'RES008' 1`] = `
{
  "admissionDate": "2015-08-16",
  "custodyLevel": "MINIMUM",
  "displayId": "dRES008",
  "facilityId": "FACILITY NAME",
  "gender": "TRANS",
  "officerId": "OFFICER5",
  "personExternalId": "RES008",
  "personName": {
    "givenNames": "Eighth",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres008",
  "releaseDate": "2024-08-16",
  "stateCode": "US_ME",
  "unitId": "UNIT A",
}
`;

exports[`schema for 'US_ME' 'RES999' 1`] = `
{
  "admissionDate": "2020-05-16",
  "custodyLevel": "MEDIUM",
  "displayId": "dRES999",
  "facilityId": "FACILITY NAME",
  "gender": "MALE",
  "officerId": "OFFICER5",
  "personExternalId": "RES999",
  "personName": {
    "givenNames": "Ineligible",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres999",
  "releaseDate": "2024-05-16",
  "stateCode": "US_ME",
  "unitId": "UNIT B",
}
`;
